examples/argocd-first-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-web
  namespace: demo-gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-web
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: web-content
          configMap:
            name: hello-web
