examples/argocd-first-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  namespace: demo-gitops
spec:
  selector:
    app: hello-web
  ports:
    - name: http
      port: 80
      targetPort: 80
