examples/argocd-first-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web
  namespace: demo-gitops
spec:
  ingressClassName: traefik
  rules:
    - host: hello.rpi5b.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-web
                port:
                  number: 80
